fix #479 address bar overlaps the buttons on the right (Account, Extensions, Menu)

--- a/misc/firefox/chrome/userChrome.css
+++ b/misc/firefox/chrome/userChrome.css
@@ -208,7 +208,7 @@ hbox.tab-content .tab-icon-image {
 
 #urlbar {
   max-width: 70% !important;
-  margin: 0 15% !important;
+  margin: 0 !important;
   /* 	position: unset!important; */
 }
 
